fixed horizontal overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
     width: 100vw;
     position: relative;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 #navbar-list {
